--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,7 @@ jobs:
       - name: install pip packages
         run: |
           python -m pip install --upgrade pip
-          pip freeze > requirements.txt
-          pip install -r requirement.txt
+          pip3 freeze > reqyurenebts.txt
           pip3 install -r requirements.txt
       - name: weixin
         run: |
